# kawaii-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
kawaii_monitor/: __init__.py  __main__.py  __pycache__  monitor.py
