[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kawaii-monitor"
version = "1.0.3"
description = "A kawaii system monitor with cute emojis and detailed system info."
readme = "README.md"
authors = [
  { name = "Aryan Mistry", email = "fe.aryan@outlook.com" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.6"

# Note: On Unix systems, curses is part of the standard library.
# On Windows, you'll need to install windows-curses.
dependencies = [
  "psutil>=5.8.0",
  "windows-curses; sys_platform == 'win32'"
]

[project.urls]
"Homepage" = "https://github.com/fearyan/kawaii-monitor"

[project.scripts]
kawaii-monitor = "kawaii_monitor.__main__:run"

keywords = ["monitor", "system", "kawaii", "cute", "psutil", "curses"]
